--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "react-youtube": "^7.9.0"
   },
   "devDependencies": {},
   "scripts": {
