--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@material-ui/icons": "^4.0.1",
     "@material-ui/styles": "^4.0.2",
     "bootstrap": "^4.3.1",
+    "firebase": "^6.1.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
     "react-youtube": "^7.9.0"
