--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
-    "react-youtube": "^7.9.0"
+    "react-youtube": "^7.9.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
